@@ -1,3 +1,9 @@
+Jun 24, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
+
+ * plugins/dfsound/spu.c: Reset lastch to -1 in SPUinit().
+ * plugins/dfsound/psemu.c: Removed support for obsoleted ancient API.
+ * plugins/dfsound/Makefile.am: Removed psemu.c.
+
 Jun 23, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
 
  * libpcsxcore/sio.c: Convert more ASCII characters to half-width.
